<resources>
    <string name="app_name">News World</string>
    <string name="category_name_sample">Food and Nutrition</string>
    <string name="thumbnail_image_description">No Image</string>
    <string name="title_sample">BSN WHEY Protein</string>
    <string name="title">Title</string>
    <string name="author_time">PTI • 1h</string>
    <string name="dot">.</string>
    <string name="desc">Description</string>
    <string name="author">Author</string>
    <string name="action_settings">Settings</string>
    <string name="open_db">Open DB</string>
    <string name="enable_custom_logs">true</string>
    <string name="enable_critical_logs">true</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string-array name="option_menu_items">
        <item>Share</item>
        <item>Save</item>
    </string-array>
</resources>
