<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="7dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <!--<FrameLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="fill_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:scaleType="fitXY"
                    android:background="@android:color/background_dark"
                    app:srcCompat="@android:drawable/ic_dialog_info"
                    android:visibility="visible"
                    android:focusable="false" />
                <View
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:background="@drawable/trending_gradient_shape"/>

            </FrameLayout>-->
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="fill_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/background_dark"
                    android:focusable="false"
                    android:scaleType="fitXY"
                    android:visibility="visible"
                    app:srcCompat="@android:drawable/ic_dialog_info" />

                <Button
                    android:id="@+id/options_button_on_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:text="@string/vertical_ellipsis"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />


                <TextView
                    android:id="@+id/news_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="160dp"
                    android:focusable="false"
                    android:maxLines="2"
                    android:text="@string/dot"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/news_source_and_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:focusable="false"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:text="@string/author_time"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="12sp" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center|left"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/titleTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/title"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/descriptionTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/desc"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>